Use correct codepoint in example

--- a/tests/behavior_keymap.dtsi
+++ b/tests/behavior_keymap.dtsi
@@ -5,11 +5,11 @@
 
 / {
     behaviors {
-        uc: uc {
+        uc_ae: uc_ae {
             compatible = "zmk,behavior-unicode";
             #binding-cells = <0>;
             codepoint = "00E4";
-            shifted-codepoint = "00E6";
+            shifted-codepoint = "00C4";
         };
     };
 
@@ -17,7 +17,7 @@
         compatible = "zmk,keymap";
         default_layer {
             bindings = <
-                &uc &kp LSHFT
+                &uc_ae &kp LSHFT
                 &uc_input UC_LIN &none
             >;
         };
