--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Run tests (main)
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    uses: urob/zmk-actions/.github/workflows/run-tests.yml@v8.0.0
+    uses: urob/zmk-actions/.github/workflows/run-tests.yml@v8
     with:
       toolchain: gnuarmemb
       zmk-version: main
